[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/dialogic/Dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sprites/UI/Dialogue/textbox.png" type="Texture" id=2]
[ext_resource path="res://Assets/Font/VRC_OSD_MONO_1.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Font/Mega_Man.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Sprites/UI/Dialogue/next-indicator.png" type="Texture" id=5]
[ext_resource path="res://addons/dialogic/Nodes/dialog_node_rr.gd" type="Script" id=6]
[ext_resource path="res://Assets/Sprites/UI/Dialogue/auto_selected_idle.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/UI/Dialogue/auto_idle.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/UI/Dialogue/history_idle.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/UI/Dialogue/history_hover.png" type="Texture" id=10]

[node name="CustomDialogNode" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="TextBubble" parent="." index="1"]
margin_left = -960.0
margin_top = -342.0
margin_right = 960.0
margin_bottom = 0.0

[node name="TextureRect" parent="TextBubble" index="1"]
texture = ExtResource( 2 )

[node name="RichTextLabel" parent="TextBubble" index="2"]
margin_left = 488.0
margin_top = 178.0
margin_right = -255.0
margin_bottom = -53.0
custom_fonts/normal_font = ExtResource( 3 )
scroll_active = false

[node name="NextIndicator" parent="TextBubble/NextIndicatorContainer" index="0"]
visible = false
margin_left = 1635.6
margin_top = 297.6
margin_right = 1686.6
margin_bottom = 348.6
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )

[node name="NameLabel" parent="TextBubble" index="4"]
margin_left = 477.0
margin_top = 117.0
margin_right = 630.0
margin_bottom = 158.0
rect_min_size = Vector2( 153, 41 )
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 0 )
align = 0

[node name="ColorRect" parent="TextBubble/NameLabel" index="0"]
color = Color( 0.156863, 0.156863, 0.156863, 1 )

[node name="NextStringClickArea" type="Control" parent="." index="2"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="." index="3"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 488.0
margin_top = -246.0
margin_right = -235.0
margin_bottom = -182.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoAdvanceButton" type="TextureButton" parent="Buttons" index="0"]
margin_left = 964.0
margin_right = 1078.0
margin_bottom = 64.0
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HistoryButton" type="TextureButton" parent="Buttons" index="1"]
margin_left = 1082.0
margin_right = 1197.0
margin_bottom = 64.0
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" parent="." index="4"]
margin_left = 960.0
margin_top = 540.0
margin_right = 960.0
margin_bottom = 540.0

[node name="AutoAdvanceTimer" type="Timer" parent="." index="7"]

[connection signal="gui_input" from="NextStringClickArea" to="." method="_on_NextStringClickArea_gui_input"]
[connection signal="toggled" from="Buttons/AutoAdvanceButton" to="." method="_on_AutoAdvanceButton_toggled"]
[connection signal="timeout" from="AutoAdvanceTimer" to="." method="_on_AutoAdvanceTimer_timeout"]

[editable path="TextBubble"]
